--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,12 +10,14 @@ kotlinxCoroutines = "1.9.0"
 junit = "5.10.1"
 jackson = "2.17.2" #  this is the version for spring-boot:3.3.3
 retrofit2 = "2.11.0"
-okhttp = "4.12.0"
+okHttp = "4.12.0"
 sandwichRetrofit = "2.0.8"
 springBoot = "3.3.3"
 osdetectorPlugin = "1.7.1"
 springDocs = "2.3.0"
 jasypt = "3.0.5"
+reactor = "3.3.6.RELEASE"
+reactorKotlin = "1.0.2.RELEASE"
 
 [libraries]
 kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -23,6 +25,9 @@ kotlinxDatetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.r
 kotlinxSerialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJSON" }
 kotlinxCoroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 junit = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
+kotlinxCoroutinesReactor = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactor", version.ref = "kotlinxCoroutines" }
+reactorKotlinExtensions = { module = "io.projectreactor.kotlin:reactor-kotlin-extensions", version.ref = "reactorKotlin" }
+reactorTest = { module = "io.projectreactor:reactor-test", version.ref = "reactor" }
 
 jacksonDatabind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
 jacksonModuleKotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
@@ -30,9 +35,9 @@ jacksonJsr310 = { module = "com.fasterxml.jackson.datatype:jackson-datatype-jsr3
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit2" }
 retrofit2ConverterJackson = { module = "com.squareup.retrofit2:converter-jackson", version.ref = "retrofit2" }
 retrofit2ConverterScalas = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit2" }
-okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
-okHttpMockWebServer = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
-okhttpLoggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
+okHttpMockWebServer = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okHttp" }
+okhttpLoggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 sandwichRetrofit = { module = "com.github.skydoves:sandwich-retrofit", version.ref = "sandwichRetrofit" }
 sandwichRetrofitSerialization = { module = "com.github.skydoves:sandwich-retrofit-serialization", version.ref = "sandwichRetrofit" }
 
@@ -49,6 +54,7 @@ jasypt = { module = "com.github.ulisesbocchio:jasypt-spring-boot-starter", versi
 # Libraries can be bundled together for easier import
 [bundles]
 kotlinxEcosystem = ["kotlinxDatetime", "kotlinxSerialization", "kotlinxCoroutines"]
+kotlinxCoroutinesReactor = ["kotlinxCoroutines", "kotlinxCoroutinesReactor", "reactorKotlinExtensions"]
 jackson = ["jacksonDatabind", "jacksonModuleKotlin", "jacksonJsr310"]
 retrofit2 = [
     "retrofit2",
@@ -69,6 +75,11 @@ springBootWebFluxDependencies = [
     "springBootStarterWebflux",
     "springBootStarterValidation",
     "springDocs"
+]
+
+okHttpMockWebServer = [
+    "okHttp",
+    "okHttpMockWebServer"
 ]
 
 [plugins]
